--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <title>Naiades</title>
 </head>
 
 <body>
@@ -15,19 +14,18 @@
             <img src="img/logo.png" alt="">
         </div>
 
-        <div class="rectangulo abajo medium" style="font-size: 16,67pt;">
+        <div class="rectangulo abajo medium">
             <p> lunch</p>
         </div>
 
-        <div class="titulo abajo heavy" style="font-size: 56,24pt;">
+        <div class="titulo abajo heavy">
             <p>Lorem  ipsum </p>
             <p>dolor sit  amet </p>
-        </div>
-        
+        </div>   
     </header>
 
         <section class="contenedores dos"> 
-            <div class="blanco roman" style="font-size: 15 pt;">
+            <div class="blanco roman">
                 <p><span class="bold">Lorem ipsum dolor sit amet, consectetur adipisicing elit,</span> sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 
                 <p> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p> 
@@ -35,14 +33,14 @@
                 <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.<span class="bold">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</span></p>
             </div>
 
-            <div class="gris bold" style="font-size: 16pt;">
+            <div class="gris bold">
                 <img src="img/calendar.png" alt="">
 
                 <p> <span class="azul"> March 3th | 12:00 PM </span> </p>
 
                 <p> <span>TBD </span> </p>
 
-                <button class="medium" style="font-size: 16,67 pt;"> Confirm attendance </button>
+                <button class="medium"> Confirm attendance </button>
             </div>
         </section>
 
@@ -50,14 +48,14 @@
          <div class="video">
             <img src="img/video.png" alt="">
         </div>
-        <div class="roman" style="font-size: 15pt;">
+        <div class="roman">
             <p> <span class="bold">Lorem ipsum dolor sit amet, consectetur adipisicing elit,</span> sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
 
             <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p>
         </div>
         </section>
 
-        <section class="cuatro centro" style="font-size:30,64 pt;">
+        <section class="cuatro centro">
             <p><span class="azul roman"> Speaker:</span> </p>
 
             <p><span class="azul heavy"> Lorem Ipsum</span></p>
@@ -66,13 +64,13 @@
 
         </section>
 
-        <footer class="contenedores" style="font-size: 15pt;">
-            <div>
+        <footer class="contenedores">
+            <div class="info">
                 <p><span class="mayusc roman"> More information:</span></p>  
                 <p> <span class="bold">Lorem Ipsum</span> <span class="roman"> | Vice President </span></p>
                 <p> <span class="azul bold">consectetur@loremipsum.com </span> </p>  
             </div>
-            <div class="roman" style="font-size: 12pt;"> 
+            <div class="roman derechos"> 
                 <img src="img/logomini.png" alt="">
                 <p>Generic 2020.</p>
                 <p>All rights reserved </p>
