--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -14,38 +14,37 @@
             <img src="img/logo.png" alt="">
         </div>
 
-        <div class="rectangulo abajo medium">
+        <div class="lunch medium">
             <p> lunch</p>
         </div>
 
-        <div class="titulo abajo heavy">
-            <p>Lorem  ipsum </p>
-            <p>dolor sit  amet </p>
-        </div>   
+        <div class="titulo heavy">
+            <p>Lorem  ipsum dolor sit  amet</p>
+        </div>
     </header>
 
-        <section class="contenedores dos"> 
-            <div class="blanco roman">
-                <p><span class="bold">Lorem ipsum dolor sit amet, consectetur adipisicing elit,</span> sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+    <section class="contenedores dos">
+        <div class="blanco roman">
+            <p><span class="bold">Lorem ipsum dolor sit amet, consectetur adipisicing elit,</span> sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 
-                <p> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p> 
-                    
-                <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.<span class="bold">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</span></p>
-            </div>
+            <p> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 
-            <div class="gris bold">
-                <img src="img/calendar.png" alt="">
+            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.<span class="bold">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</span></p>
+        </div>
 
-                <p> <span class="azul"> March 3th | 12:00 PM </span> </p>
+        <div class="gris bold">
+            <img src="img/calendar.png" alt="">
 
-                <p> <span>TBD </span> </p>
+            <p> <span class="azul"> March 3th | 12:00 PM </span> </p>
 
-                <button class="medium"> Confirm attendance </button>
-            </div>
-        </section>
+            <p> <span>TBD </span> </p>
 
-        <section class="tres centro">
-         <div class="video">
+            <button class="medium"> Confirm attendance </button>
+        </div>
+    </section>
+
+    <section class="tres centro">
+        <div class="video">
             <img src="img/video.png" alt="">
         </div>
 
@@ -54,29 +53,29 @@
 
             <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p>
         </div>
-        </section>
+    </section>
 
-        <section class="cuatro centro">
-            <p><span class="azul roman"> Speaker:</span> </p>
+    <section class="cuatro centro">
+        <p><span class="azul roman"> Speaker:</span> </p>
 
-            <p><span class="azul heavy"> Lorem Ipsum</span></p>
+        <p><span class="azul heavy"> Lorem Ipsum</span></p>
 
-            <p><span class="light"> - Dolor sit amet</span></p>
+        <p><span class="light"> - Dolor sit amet</span></p>
 
-        </section>
+    </section>
 
-        <footer class="contenedores">
-            <div class="info">
-                <p><span class="mayusc roman"> More information:</span></p>  
-                <p> <span class="bold">Lorem Ipsum</span> <span class="roman"> | Vice President </span></p>
-                <p> <span class="azul bold">consectetur@loremipsum.com </span> </p>  
-            </div>
-            <div class="roman derechos"> 
-                <img src="img/logomini.png" alt="">
-                <p>Generic 2020.</p>
-                <p>All rights reserved </p>
-            </div>
-        </footer>
+    <footer class="contenedores">
+        <div class="info">
+            <p><span class="mayusc roman"> More information:</span></p>
+            <p> <span class="bold">Lorem Ipsum</span> <span class="roman"> | Vice President </span></p>
+            <p> <span class="azul bold">consectetur@loremipsum.com </span> </p>
+        </div>
+        <div class="roman derechos">
+            <img src="img/logomini.png" alt="">
+            <p>Generic 2020.</p>
+            <p>All rights reserved </p>
+        </div>
+    </footer>
 
 
 </body>
