--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
 
         <div class="lunch medium">
-            <p> lunch</p>
+            <p>lunch</p>
         </div>
 
         <div class="titulo heavy">
@@ -23,15 +23,20 @@
         </div>
     </header>
 
-    <section class="contenedores dos">
+    <section class="primeraSeccion">
         <div class="blanco roman">
-            <p><span class="bold">Lorem ipsum dolor sit amet, consectetur adipisicing elit,</span> sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <p>
+                <span class="bold">Lorem ipsum dolor sit amet, consectetur adipisicing elit,</span> sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            </p>
 
-            <p> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <p>
+                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+            </p>
 
-            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.<span class="bold">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</span></p>
+            <p>
+                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.<span class="bold">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</span>
+            </p>
         </div>
-
         <div class="gris bold">
             <img src="img/calendar.png" alt="">
 
