--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
         <div class="video">
             <img src="img/video.png" alt="">
         </div>
+        <div class="play">
+            <img src="img/play.png" alt="">
+        </div>
 
         <div class="roman">
             <p> <span class="bold">Lorem ipsum dolor sit amet, consectetur adipisicing elit,</span> sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
@@ -69,7 +72,7 @@
 
     </section>
 
-    <footer class="contenedores">
+    <footer class="caja">
         <div class="info">
             <p><span class="mayusc roman"> More information:</span></p>
             <p> <span class="bold">Lorem Ipsum</span> <span class="roman"> | Vice President </span></p>
