--- a/index.html
+++ b/index.html
@@ -60,12 +60,14 @@
         </div>
     </section>
 
-    <section class="cuatro centro">
-        <p><span class="azul roman"> Speaker:</span> </p>
+    <section class="cuartaSeccion centro">
+        <p>
+            <span class="oscuro roman">Speaker:</span>
 
-        <p><span class="azul heavy"> Lorem Ipsum</span></p>
+            <span class="azul heavy"> Lorem Ipsum</span>
 
-        <p><span class="light"> - Dolor sit amet</span></p>
+            <span class="light"> - Dolor sit amet</span>
+        </p>
 
     </section>
 
