--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
     <section class="tres centro">
         <div class="video">
-            <img src="img/VideoPlay.png" alt="">
+            <img src="img/video.png" alt="">
         </div>
     
 
