--- a/index.html
+++ b/index.html
@@ -92,10 +92,8 @@
         <div class="roman derechos">
             <img src="img/logomini.png" alt="">
             <p>Generic 2020.</p>
-            <p>All rights reserved </p>
+            <p>All rights reserved.</p>
         </div>
     </footer>
-
-
 </body>
 </html>
