--- a/index.html
+++ b/index.html
@@ -51,17 +51,17 @@
                 <p> <span>TBD </span> </p>
             </div>
             <div>
-                <button class="confirm medium">Confirm attendance</button>
+                <button class="medium">Confirm attendance</button>
             </div>
         </div>
 
     </section>
 
-    <section class="segundaSeccion centro">
+    <section class="segundaSeccion">
         <div class="video">
             <img src="img/video.png" alt="">
         </div>
-        <div class="roman contenedor">
+        <div class="roman texto">
             <div>
                 <p><span class="bold">Lorem ipsum dolor sit amet, consectetur adipisicing elit,</span> sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
             </div>
